@@ -1,6 +1,6 @@
 # Files to ignore by git
 #
-# Version: 20150927
+# Version: 20151228
 
 # Generic auto-generated build files
 *~
@@ -36,12 +36,15 @@ stamp-h[1-9]
 /autom4te.cache/
 /build
 /compile
+/confdefs.h
+/config.cache
 /config.guess
 /config.log
 /config.rpath
 /config.status
 /config.sub
 /configure
+/conftest.c
 /depcomp
 /dist
 /install-sh
