@@ -1,6 +1,6 @@
 dnl Functions for libcdata
 dnl
-dnl Version: 20150102
+dnl Version: 20160108
 
 dnl Function to detect if libcdata is available
 dnl ac_libcdata_dummy is used to prevent AC_CHECK_LIB adding unnecessary -l<library> arguments
@@ -24,7 +24,7 @@ AC_DEFUN([AX_LIBCDATA_CHECK_LIB],
    [test "x$cross_compiling" != "xyes" && test "x$PKGCONFIG" != "x"],
    [PKG_CHECK_MODULES(
     [libcdata],
-    [libcdata >= 20150102],
+    [libcdata >= 20160108],
     [ac_cv_libcdata=yes],
     [ac_cv_libcdata=no])
    ])
@@ -112,6 +112,11 @@ AC_DEFUN([AX_LIBCDATA_CHECK_LIB],
     AC_CHECK_LIB(
      cdata,
      libcdata_array_insert_entry,
+     [ac_cv_libcdata_dummy=yes],
+     [ac_cv_libcdata=no])
+    AC_CHECK_LIB(
+     cdata,
+     libcdata_array_remove_entry,
      [ac_cv_libcdata_dummy=yes],
      [ac_cv_libcdata=no])
 
