@@ -1,28 +1,20 @@
 #!/bin/bash
-#
 # Python-bindings set ASCII codepage testing script
 #
-# Copyright (C) 2009-2016, Joachim Metz <joachim.metz@gmail.com>
-#
-# Refer to AUTHORS for acknowledgements.
-#
-# This software is free software: you can redistribute it and/or modify
-# it under the terms of the GNU Lesser General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# This software is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU Lesser General Public License
-# along with this software.  If not, see <http://www.gnu.org/licenses/>.
-#
+# Version: 20160126
 
 EXIT_SUCCESS=0;
 EXIT_FAILURE=1;
 EXIT_IGNORE=77;
+
+TEST_PREFIX=`pwd`;
+TEST_PREFIX=`dirname ${TEST_PREFIX}`;
+TEST_PREFIX=`basename ${TEST_PREFIX} | sed 's/^lib//'`;
+
+if ! test -z ${SKIP_PYTHON_TESTS};
+then
+	exit ${EXIT_IGNORE};
+fi
 
 PYTHON=`which python${PYTHON_VERSION} 2> /dev/null`;
 
@@ -33,7 +25,7 @@ then
 	exit ${EXIT_FAILURE};
 fi
 
-SCRIPT="pymsiecf_test_set_ascii_codepage.py";
+SCRIPT="py${TEST_PREFIX}_test_set_ascii_codepage.py";
 
 if ! test -f ${SCRIPT};
 then
@@ -44,10 +36,10 @@ fi
 
 if test `uname -s` = 'Darwin';
 then
-	DYLD_LIBRARY_PATH="../libmsiecf/.libs/" PYTHONPATH="../pymsiecf/.libs/" ${PYTHON} ${SCRIPT};
+	DYLD_LIBRARY_PATH="../lib${TEST_PREFIX}/.libs/" PYTHONPATH="../py${TEST_PREFIX}/.libs/" ${PYTHON} ${SCRIPT};
 	RESULT=$?;
 else
-	LD_LIBRARY_PATH="../libmsiecf/.libs/" PYTHONPATH="../pymsiecf/.libs/" ${PYTHON} ${SCRIPT};
+	LD_LIBRARY_PATH="../lib${TEST_PREFIX}/.libs/" PYTHONPATH="../py${TEST_PREFIX}/.libs/" ${PYTHON} ${SCRIPT};
 	RESULT=$?;
 fi
 
